# khcolors

./: .gitignore  README.md  pyproject.toml
khcolors/: LICENSE.txt  README.md  pyproject.toml
khcolors/src/khcolors/: __about__.py  __init__.py  colors_util.py
src/khcolors/: __about__.py  __main__.py  colors_util.py
